# pika

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  demo.pk  notes.md  smalltt.pk  test.ll  test.pk
.github/workflows/: rust.yml
editors/code/: language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
editors/code/src/: extension.ts
editors/code/syntaxes/: pika.tmLanguage.json
src/: affine.rs  args.rs  bicheck.rs  binding.rs  builtins.rs  codegen.rs  common.rs  elab.rs  elaborate.rs  error.rs  eval.rs  evaluate.rs  grammar.lalrpop  lexer.rs  lib.rs  low.rs  lower.rs  main.rs  options.rs  parser.rs  pattern.rs  pretty.rs  printing.rs  query.rs  repl.rs  server.rs  term.rs
src/backend/: README.md  codegen.rs  low.rs  mod.rs  util.rs
src/elab/: cxt.rs  elaborate.rs  ide_support.rs  metas.rs  mod.rs  pattern.rs  term.rs  unify.rs  val.rs  var.rs
src/elaborate/: errors.rs  mcxt.rs  unify.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs  splitter.rs  syntax.rs
tests/: Capabilities.pk  DepErrors.pk  GADTs.pk  Iterator.pk  References.pk  ReferencesErr.pk  Smalltt.pk  Structs.pk  Traits.pk  affine_fail.pk  affine_fail_fun.pk  affine_pass.pk  ambient.pk  basic.pk  basic_print.pk  bools.pk  boxing.pk  check_for_eof.pk  choice.pk  closure.pk  conflicting_metas.pk  const_arith.pk  coroutines.pk  cps.pk  curry_errors.pk  data.pk  do_meta.pk  duplicate_constructor.pk  eff_not_allowed.pk  effects.pk  effects_errors.pk  effects_run.pk  error.pk  errors_demo.pk  fact.pk  fail.pk  fib.pk  freer.pk  gadt.pk  implicit.pk  (+33 more)
tests/multifile/: a.pk  b.pk
