[package]
name = "pika"
version = "0.1.0"
authors = ["Lorxu <sylvie.dirkswager@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
salsa = "*"
codespan-reporting = "*"
lazy_static = "*"
pretty = { version = "*", features = ["termcolor"] }
durin = { git = "https://github.com/tolziplohu/durin" }
smallvec = "*"
assert_cmd = "*"
predicates = "*"
rustyline = "*"

[features]
